Fixed a layout issue

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -281,7 +281,7 @@ div.yui-g.sliderfalse>div.tableform table p>label {
 	width: 974px;
 	color: #1b5791;
 	height: auto;
-	min-height: 300px;
+	min-height: 200px;
 	background: url(../images/bg-body_03.png) repeat-y scroll -1px -1px;
 }
 
